--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div id="login-screen" class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
         <div class="max-w-md w-full space-y-8">
             <div>
-                <div class="text-center text-5xl font-extrabold" style="color: #0E639C;">Q'go<span style="color: #4FB8AF;">Cargo</span></div>
+                <img class="mx-auto h-24 w-auto" src="http://qgocargo.com/logo.png" alt="Q'go Cargo Logo">
                 <h2 id="auth-title" class="mt-6 text-center text-3xl font-extrabold text-gray-900">Sign in to your account</h2>
             </div>
             <div class="mt-8 space-y-6 bg-white p-8 rounded-lg shadow-md">
@@ -216,7 +216,7 @@
             <!-- Header Section -->
             <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 gap-4">
                 <div class="flex items-center">
-                    <div id="logo-container" class="text-3xl font-bold mr-4" style="color: #0E639C;">Q'go<span style="color: #4FB8AF;">Cargo</span></div>
+                    <img id="logo-container" class="h-16 w-auto mr-4" src="http://qgocargo.com/logo.png" alt="Q'go Cargo Logo">
                     <h1 class="text-3xl sm:text-4xl font-bold text-gray-800 border-l-4 border-gray-300 pl-4">JOB FILE</h1>
                 </div>
                 <div class="text-right w-full sm:w-auto">
@@ -2395,7 +2395,7 @@
                 <div class="border border-gray-700 p-2 bg-white">
                     <div class="grid grid-cols-12 gap-px bg-gray-700" style="border: 1px solid #374151;">
                         <div class="col-span-3 bg-white p-1 flex items-center" style="border: 1px solid #374151;">
-                            <div class="text-xl font-bold" style="color: #0E639C;">Q'go<span style="color: #4FB8AF;">Cargo</span></div>
+                             <img src="http://qgocargo.com/logo.png" alt="Q'go Cargo Logo" class="h-16 w-auto">
                         </div>
                         <div class="col-span-6 bg-white flex items-center justify-center text-xl font-bold" style="border: 1px solid #374151;">JOB FILE</div>
                         <div class="col-span-3 bg-white p-1 text-xs" style="border: 1px solid #374151;"><div><strong>Date:</strong> ${data.d || ''}</div><div><strong>P.O. #:</strong> ${data.po || ''}</div></div>
