--- a/index.html
+++ b/index.html
@@ -611,25 +611,20 @@
             <!-- Data Backup & Restore -->
             <div class="border rounded-lg p-4 mt-6">
                 <h4 class="text-lg font-semibold mb-3">Data Backup & Restore</h4>
-                <p class="text-sm text-gray-600 mb-4">Backup all job files to JSON for offline storage or restoration. Export to Excel for reporting.</p>
-                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+                <p class="text-sm text-gray-600 mb-4">First, sync data to create a local backup, then use the Advanced Backup page to generate ZIP files without using Firebase reads.</p>
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+                    <button onclick="syncDataForBackup()" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded flex items-center justify-center gap-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M15.312 11.227c-2.39.78-4.684.78-7.073 0a.75.75 0 01.34-1.459c2.06.673 4.1.673 6.165 0a.75.75 0 011.018 1.119.75.75 0 01-.45.34zm-2.14-3.342a.75.75 0 01.763.218c.39.462.333 1.144-.13 1.533a.75.75 0 01-1.06-1.06c.19-.156.328-.358.428-.591zM8.828 8.12a.75.75 0 01.218-.763c.462-.39 1.144-.333 1.533.13a.75.75 0 11-1.06 1.06c-.156-.19-.358-.328-.59-.428zM4.002 15h11.996a2 2 0 002-2V7a2 2 0 00-2-2H4a2 2 0 00-2 2v6a2 2 0 002 2z" clip-rule="evenodd" /></svg>
+                        1. Sync Data for Backup
+                    </button>
+                    <a href="backup.html" target="_blank" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded flex items-center justify-center gap-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2.998 13.82a1 1 0 01.707-.293h12.59a1 1 0 110 2H3.705a1 1 0 01-.707-1.707zM6.585 9.293a1 1 0 010 1.414l-2.293 2.293a1 1 0 01-1.414-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L6.585 9.293zM13.414 5.293a1 1 0 010 1.414L11.12 8.999a1 1 0 01-1.414-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L13.414 5.293z" /></svg>
+                        2. Open Advanced Backup
+                    </a>
                     <button onclick="backupAllData()" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center justify-center gap-2">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z" clip-rule="evenodd" /></svg>
-                        Backup (JSON)
+                        Backup All (JSON)
                     </button>
-                    <label for="restore-file-input" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded flex items-center justify-center gap-2 cursor-pointer">
-                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
-                         Restore (JSON)
-                         <input type="file" id="restore-file-input" class="hidden" accept=".json" onchange="handleRestoreFile(event)">
-                    </label>
-                    <button onclick="exportAllToExcel()" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded flex items-center justify-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M2 5a2 2 0 012-2h12a2 2 0 012 2v10a2 2 0 01-2 2H4a2 2 0 01-2-2V5zm2-1a1 1 0 00-1 1v2h14V5a1 1 0 00-1-1H4zM3 9v7a1 1 0 001 1h12a1 1 0 001-1V9H3zm2 2a1 1 0 011-1h2a1 1 0 110 2H6a1 1 0 01-1-1zm5 0a1 1 0 011-1h2a1 1 0 110 2h-2a1 1 0 01-1-1z" /></svg>
-                        Export (Excel)
-                    </button>
-                    <a href="backup.html" target="_blank" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded flex items-center justify-center gap-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5 4a3 3 0 00-3 3v6a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3H5zm-1 9v-1h5v2H5a1 1 0 01-1-1zm7 1h4a1 1 0 001-1v-1h-5v2zm0-4h5V8h-5v2zM4 8h5v2H4V8zm0 5a1 1 0 011-1h.5a.5.5 0 010 1H5a1 1 0 01-1-1z" clip-rule="evenodd" /></svg>
-                        Advanced Backup
-                    </a>
                 </div>
             </div>
         </div>
@@ -3076,6 +3071,25 @@
             tableBody.appendChild(newRow);
         }
         
+        function syncDataForBackup() {
+            if (!jobFilesCache || jobFilesCache.length === 0) {
+                showNotification("No job files data available to sync.", true);
+                return;
+            }
+
+            try {
+                const backupPayload = {
+                    lastSynced: new Date().toISOString(),
+                    data: jobFilesCache
+                };
+                localStorage.setItem('jobFilesBackupCache', JSON.stringify(backupPayload));
+                showNotification(`Successfully synced ${jobFilesCache.length} job files for the backup tool.`);
+            } catch (error) {
+                console.error("Error saving data to localStorage:", error);
+                showNotification("Could not sync data. The browser storage might be full.", true);
+            }
+        }
+
         function toggleAuthView(showLogin) {
             const nameField = document.getElementById('signup-name-field');
             const emailField = document.getElementById('email-address');
@@ -3912,6 +3926,7 @@
             window.deleteChargeDescription = deleteChargeDescription;
             window.addChargeRow = addChargeRow;
             window.exportAllToExcel = exportAllToExcel;
+            window.syncDataForBackup = syncDataForBackup;
 
             populateTable();
             calculate();
@@ -3920,4 +3935,5 @@
     </script>
 </body>
 </html>
+
 
