--- a/main.html
+++ b/main.html
@@ -154,9 +154,9 @@
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="jobfile-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-blue-500 hover:text-blue-600 dark:text-blue-400 dark:hover:text-blue-300">
+                    <button data-modal-target="jobfile-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-blue-500 hover:bg-blue-600 dark:bg-blue-500 dark:hover:bg-blue-400 px-3 py-1.5 rounded-full transition-colors">
                         Explore Features
-                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1 transition-transform group-hover:translate-x-1"></i>
+                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
                 </div>
             </div>
@@ -173,9 +173,9 @@
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                     <button data-modal-target="pod-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-green-500 hover:text-green-600 dark:text-green-400 dark:hover:text-green-300">
+                     <button data-modal-target="pod-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-green-500 hover:bg-green-600 dark:bg-green-500 dark:hover:bg-green-400 px-3 py-1.5 rounded-full transition-colors">
                         Explore Features
-                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1 transition-transform group-hover:translate-x-1"></i>
+                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
                 </div>
             </div>
@@ -192,9 +192,9 @@
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="whm-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-yellow-500 hover:text-yellow-600 dark:text-yellow-400 dark:hover:text-yellow-300">
+                    <button data-modal-target="whm-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-yellow-500 hover:bg-yellow-600 dark:bg-yellow-500 dark:hover:bg-yellow-400 px-3 py-1.5 rounded-full transition-colors">
                         Explore Features
-                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1 transition-transform group-hover:translate-x-1"></i>
+                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
                 </div>
             </div>
@@ -211,9 +211,9 @@
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="inventory-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-purple-500 hover:text-purple-600 dark:text-purple-400 dark:hover:text-purple-300">
+                    <button data-modal-target="inventory-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-purple-500 hover:bg-purple-600 dark:bg-purple-500 dark:hover:bg-purple-400 px-3 py-1.5 rounded-full transition-colors">
                         Explore Features
-                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1 transition-transform group-hover:translate-x-1"></i>
+                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
                 </div>
             </div>
@@ -230,9 +230,9 @@
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="backup-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-red-500 hover:text-red-600 dark:text-red-400 dark:hover:text-red-300">
+                    <button data-modal-target="backup-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-red-500 hover:bg-red-600 dark:bg-red-500 dark:hover:bg-red-400 px-3 py-1.5 rounded-full transition-colors">
                         Explore Features
-                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1 transition-transform group-hover:translate-x-1"></i>
+                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
                 </div>
             </div>
@@ -249,9 +249,9 @@
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="reports-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-indigo-500 hover:text-indigo-600 dark:text-indigo-400 dark:hover:text-indigo-300">
+                    <button data-modal-target="reports-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-indigo-500 hover:bg-indigo-600 dark:bg-indigo-500 dark:hover:bg-indigo-400 px-3 py-1.5 rounded-full transition-colors">
                         Explore Features
-                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1 transition-transform group-hover:translate-x-1"></i>
+                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
                 </div>
             </div>
@@ -268,17 +268,64 @@
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="upcoming-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-teal-500 hover:text-teal-600 dark:text-teal-400 dark:hover:text-teal-300">
+                    <button data-modal-target="upcoming-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-teal-500 hover:bg-teal-600 dark:bg-teal-500 dark:hover:bg-teal-400 px-3 py-1.5 rounded-full transition-colors">
                         Explore Roadmap
-                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1 transition-transform group-hover:translate-x-1"></i>
+                        <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
                 </div>
             </div>
         </main>
 
+        <!-- Important Notes Section -->
+        <section class="w-full max-w-6xl mx-auto my-10 px-4 animate-header" style="animation-delay: 2500ms;">
+            <h2 class="text-3xl font-bold text-center text-gray-900 dark:text-white mb-8">Important Notes & Current Status</h2>
+            <div class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-md">
+                <ul class="space-y-4 text-gray-700 dark:text-gray-300">
+                    <li class="flex items-start space-x-3">
+                        <i data-lucide="flask-conical" class="w-5 h-5 text-yellow-500 flex-shrink-0 mt-1"></i>
+                        <span>
+                            <strong>Testing Phase:</strong> All tools are currently in an active development and testing phase. We are continuously working to improve performance and add new features based on user feedback.
+                        </span>
+                    </li>
+                    <li class="flex items-start space-x-3">
+                        <i data-lucide="database" class="w-5 h-5 text-green-500 flex-shrink-0 mt-1"></i>
+                        <span>
+                            <strong>Backend Infrastructure:</strong> For the initial development, we are leveraging the free tiers of Firebase and Supabase. This provides us with powerful, scalable, and cost-effective backend infrastructure.
+                        </span>
+                    </li>
+                    <li class="flex items-start space-x-3">
+                        <i data-lucide="shield-check" class="w-5 h-5 text-blue-500 flex-shrink-0 mt-1"></i>
+                        <span>
+                            <strong>Data Security:</strong> Data security is a top priority. Despite using free tiers, all data connections are encrypted, and robust access control systems are in place to ensure data integrity and confidentiality.
+                        </span>
+                    </li>
+                    <li class="flex items-start space-x-3">
+                        <i data-lucide="message-square-plus" class="w-5 h-5 text-purple-500 flex-shrink-0 mt-1"></i>
+                        <span>
+                            <strong>Feedback Welcome:</strong> Continuous feedback is crucial for our development process. We encourage all users to report any bugs or suggest improvements to help us enhance these tools.
+                        </span>
+                    </li>
+                     <li class="flex items-start space-x-3">
+                        <i data-lucide="goal" class="w-5 h-5 text-red-500 flex-shrink-0 mt-1"></i>
+                        <span>
+                            <strong>Long-term Goal:</strong> Our long-term goal is to develop a comprehensive, in-house ERP system that digitizes and streamlines all of QGO Cargo's operational needs, significantly boosting efficiency and reducing manual workload.
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <!-- Footer -->
         <footer class="w-full max-w-6xl text-center p-4 mt-10">
-            <p class="text-sm text-gray-500 dark:text-gray-400">&copy; 2024 QGO Cargo. All Rights Reserved.</p>
+            <div class="inline-block bg-gray-200 dark:bg-gray-800/50 rounded-xl px-6 py-4">
+                <p class="text-sm text-gray-600 dark:text-gray-300 flex items-center justify-center">
+                    <i data-lucide="heart" class="w-5 h-5 text-red-500 mr-2 fill-current"></i>
+                    This project is a collaborative effort, made possible by the invaluable support from the QGO Cargo team.
+                </p>
+                <p class="text-xs text-gray-500 dark:text-gray-400 mt-2">
+                    Special thanks to our Manager, Mr. Yehia, and the dedicated testing team: Mr. Ajmal, Abdul Hadi, and Anand.
+                </p>
+            </div>
         </footer>
     </div>
 
