--- a/main.html
+++ b/main.html
@@ -149,12 +149,12 @@
                     <div class="flex items-center justify-center bg-blue-100 dark:bg-gray-700 h-16 w-16 rounded-full shadow-inner mb-4">
                         <i data-lucide="file-stack" class="w-8 h-8 text-blue-500 dark:text-blue-400"></i>
                     </div>
-                    <a href="https://akifbade.github.io/qgocargo" target="_blank" data-id="jobfile" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline">Jobfile Management</a>
+                    <a href="https://akifbade.github.io/qgocargo" target="_blank" data-id="jobfile" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700/50 transition-colors">Jobfile Management</a>
                     <p class="text-gray-600 dark:text-gray-400 mt-1 flex-grow">Main system for core operations.</p>
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="jobfile-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-blue-500 hover:bg-blue-600 dark:bg-blue-500 dark:hover:bg-blue-400 px-3 py-1.5 rounded-full transition-colors">
+                    <button data-modal-target="jobfile-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-blue-500 hover:text-blue-600 dark:text-blue-400 dark:hover:text-blue-300">
                         Explore Features
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
@@ -168,12 +168,12 @@
                     <div class="flex items-center justify-center bg-green-100 dark:bg-gray-700 h-16 w-16 rounded-full shadow-inner mb-4">
                         <i data-lucide="package-check" class="w-8 h-8 text-green-500 dark:text-green-400"></i>
                     </div>
-                    <a href="https://akifbade.github.io/qgocargo/app/pod" target="_blank" data-id="pod" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline">POD System</a>
+                    <a href="https://akifbade.github.io/qgocargo/app/pod" target="_blank" data-id="pod" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700/50 transition-colors">POD System</a>
                     <p class="text-gray-600 dark:text-gray-400 mt-1 flex-grow">Proof of Delivery tracking portal.</p>
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                     <button data-modal-target="pod-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-green-500 hover:bg-green-600 dark:bg-green-500 dark:hover:bg-green-400 px-3 py-1.5 rounded-full transition-colors">
+                     <button data-modal-target="pod-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-green-500 hover:text-green-600 dark:text-green-400 dark:hover:text-green-300">
                         Explore Features
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
@@ -187,12 +187,12 @@
                     <div class="flex items-center justify-center bg-yellow-100 dark:bg-gray-700 h-16 w-16 rounded-full shadow-inner mb-4">
                         <i data-lucide="warehouse" class="w-8 h-8 text-yellow-500 dark:text-yellow-400"></i>
                     </div>
-                    <a href="https://akifbade.github.io/qgocargo/whm" target="_blank" data-id="whm" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline">Warehouse Storage</a>
+                    <a href="https://akifbade.github.io/qgocargo/whm" target="_blank" data-id="whm" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700/50 transition-colors">Warehouse Storage</a>
                     <p class="text-gray-600 dark:text-gray-400 mt-1 flex-grow">Manage storage and release operations.</p>
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="whm-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-yellow-500 hover:bg-yellow-600 dark:bg-yellow-500 dark:hover:bg-yellow-400 px-3 py-1.5 rounded-full transition-colors">
+                    <button data-modal-target="whm-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-yellow-500 hover:text-yellow-600 dark:text-yellow-400 dark:hover:text-yellow-300">
                         Explore Features
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
@@ -206,12 +206,12 @@
                     <div class="flex items-center justify-center bg-purple-100 dark:bg-gray-700 h-16 w-16 rounded-full shadow-inner mb-4">
                         <i data-lucide="calendar-days" class="w-8 h-8 text-purple-500 dark:text-purple-400"></i>
                     </div>
-                    <a href="https://akifbade.github.io/qgocargo/app/wh" target="_blank" data-id="inventory" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline">Inventory & Staff Schedule</a>
+                    <a href="https://akifbade.github.io/qgocargo/app/wh" target="_blank" data-id="inventory" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700/50 transition-colors">Inventory & Staff Schedule</a>
                     <p class="text-gray-600 dark:text-gray-400 mt-1 flex-grow">Schedule staff and manage inventory.</p>
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="inventory-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-purple-500 hover:bg-purple-600 dark:bg-purple-500 dark:hover:bg-purple-400 px-3 py-1.5 rounded-full transition-colors">
+                    <button data-modal-target="inventory-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-purple-500 hover:text-purple-600 dark:text-purple-400 dark:hover:text-purple-300">
                         Explore Features
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
@@ -225,12 +225,12 @@
                     <div class="flex items-center justify-center bg-red-100 dark:bg-gray-700 h-16 w-16 rounded-full shadow-inner mb-4">
                         <i data-lucide="database-backup" class="w-8 h-8 text-red-500 dark:text-red-400"></i>
                     </div>
-                    <a href="https://akifbade.github.io/qgocargo/backup.html" target="_blank" data-id="backup" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline">Jobfiles Backup</a>
+                    <a href="https://akifbade.github.io/qgocargo/backup.html" target="_blank" data-id="backup" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700/50 transition-colors">Jobfiles Backup</a>
                     <p class="text-gray-600 dark:text-gray-400 mt-1 flex-grow">Download job backups in Excel format.</p>
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="backup-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-red-500 hover:bg-red-600 dark:bg-red-500 dark:hover:bg-red-400 px-3 py-1.5 rounded-full transition-colors">
+                    <button data-modal-target="backup-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-red-500 hover:text-red-600 dark:text-red-400 dark:hover:text-red-300">
                         Explore Features
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
@@ -244,12 +244,12 @@
                     <div class="flex items-center justify-center bg-indigo-100 dark:bg-gray-700 h-16 w-16 rounded-full shadow-inner mb-4">
                         <i data-lucide="bar-chart-3" class="w-8 h-8 text-indigo-500 dark:text-indigo-400"></i>
                     </div>
-                    <a href="https://akifbade.github.io/qgocargo/reports" target="_blank" data-id="reports" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline">Advanced Reports</a>
+                    <a href="https://akifbade.github.io/qgocargo/reports" target="_blank" data-id="reports" class="text-xl font-semibold text-gray-900 dark:text-white hover:underline p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700/50 transition-colors">Advanced Reports</a>
                     <p class="text-gray-600 dark:text-gray-400 mt-1 flex-grow">Download detailed reports for accounting.</p>
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="reports-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-indigo-500 hover:bg-indigo-600 dark:bg-indigo-500 dark:hover:bg-indigo-400 px-3 py-1.5 rounded-full transition-colors">
+                    <button data-modal-target="reports-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-indigo-500 hover:text-indigo-600 dark:text-indigo-400 dark:hover:text-indigo-300">
                         Explore Features
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
@@ -263,12 +263,12 @@
                     <div class="flex items-center justify-center bg-teal-100 dark:bg-gray-700 h-16 w-16 rounded-full shadow-inner mb-4">
                         <i data-lucide="rocket" class="w-8 h-8 text-teal-500 dark:text-teal-400"></i>
                     </div>
-                    <a href="#" data-id="upcoming" class="text-xl font-semibold text-gray-900 dark:text-white cursor-pointer">Upcoming Features</a>
+                    <a href="#" data-id="upcoming" class="text-xl font-semibold text-gray-900 dark:text-white cursor-pointer p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700/50 transition-colors">Upcoming Features</a>
                     <p class="text-gray-600 dark:text-gray-400 mt-1 flex-grow">A look into the future of QGO Tools.</p>
                 </div>
                 <div class="mt-4 pt-4 border-t border-gray-200 dark:border-gray-700 flex justify-between items-center">
                     <span class="text-xs text-gray-500 dark:text-gray-500 last-visited-text"></span>
-                    <button data-modal-target="upcoming-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-white bg-teal-500 hover:bg-teal-600 dark:bg-teal-500 dark:hover:bg-teal-400 px-3 py-1.5 rounded-full transition-colors">
+                    <button data-modal-target="upcoming-details" class="group view-details-btn inline-flex items-center text-sm font-semibold text-teal-500 hover:text-teal-600 dark:text-teal-400 dark:hover:text-teal-300">
                         Explore Roadmap
                         <i data-lucide="arrow-right" class="w-4 h-4 ml-1.5 transition-transform group-hover:translate-x-1"></i>
                     </button>
