--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QGO Cargo Tools Dashboard</title>
+    <link rel="icon" type="image/png" href="http://qgocargo.com/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -11,19 +12,7 @@
     
     <!-- PWA Manifest and Theme Color -->
     <meta name="theme-color" content="#111827">
-    <link rel="manifest" href="data:application/manifest+json,{
-        &quot;name&quot;: &quot;QGO Cargo Tools&quot;,
-        &quot;short_name&quot;: &quot;QGO Tools&quot;,
-        &quot;start_url&quot;: &quot;.&quot;,
-        &quot;display&quot;: &quot;standalone&quot;,
-        &quot;background_color&quot;: &quot;#111827&quot;,
-        &quot;theme_color&quot;: &quot;#111827&quot;,
-        &quot;description&quot;: &quot;QGO Cargo Tools Dashboard&quot;,
-        &quot;icons&quot;: [
-            { &quot;src&quot;: &quot;http://qgocargo.com/logo.png&quot;, &quot;sizes&quot;: &quot;192x192&quot;, &quot;type&quot;: &quot;image/png&quot; },
-            { &quot;src&quot;: &quot;http://qgocargo.com/logo.png&quot;, &quot;sizes&quot;: &quot;512x512&quot;, &quot;type&quot;: &quot;image/png&quot; }
-        ]
-    }">
+    <link rel="manifest" href="manifest.json">
 
     <style>
         html {
@@ -689,4 +678,5 @@
     </script>
 </body>
 </html>
+", give me some suggestions as well for what more to add
 
