--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
     <!-- PWA Manifest and Theme Color -->
     <meta name="theme-color" content="#111827">
     <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="http://qgocargo.com/logo.png">
 
     <style>
         html {
