--- a/main.html
+++ b/main.html
@@ -34,6 +34,48 @@
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
 
+        /* Custom Splash Screen Styles */
+        #splash-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: #111827;
+            z-index: 100;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            transition: opacity 0.5s ease-out;
+        }
+        #splash-screen.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+        .splash-logo {
+            width: 120px;
+            height: 120px;
+            padding: 1rem;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 24px;
+            animation: bounce-in 1.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+        }
+        .splash-text {
+            margin-top: 1.5rem;
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #fff;
+            opacity: 0;
+            animation: fade-in-up 1s ease-out 0.5s forwards;
+        }
+
+        @keyframes bounce-in {
+            0% { transform: scale(0.5); opacity: 0; }
+            70% { transform: scale(1.1); opacity: 1; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
         /* General Animation styles */
         @keyframes fade-in-up {
             from { opacity: 0; transform: translateY(20px); }
@@ -98,6 +140,12 @@
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
+    <!-- Custom Animated Splash Screen -->
+    <div id="splash-screen">
+        <img src="http://qgocargo.com/logo.png" alt="QGO Cargo Logo" class="splash-logo">
+        <p class="splash-text">QGO Cargo Tools for Staff</p>
+    </div>
+
     <div class="relative min-h-screen flex flex-col items-center p-4">
 
         <!-- Language Switcher -->
@@ -600,6 +648,12 @@
         // --- GENERAL SCRIPT ---
         document.addEventListener('DOMContentLoaded', () => {
             lucide.createIcons();
+
+            // Hide splash screen after animation
+            const splashScreen = document.getElementById('splash-screen');
+            setTimeout(() => {
+                splashScreen.classList.add('hidden');
+            }, 2500); // Hide after 2.5 seconds
 
             // Force external links to open in a new browser tab when in PWA mode
             if (window.matchMedia('(display-mode: standalone)').matches) {
