--- a/main.html
+++ b/main.html
@@ -683,7 +683,7 @@
                 note_feedback: '<strong>Feedback Welcome:</strong> Continuous feedback is crucial for our development process. We encourage all users to report any bugs or suggest improvements to help us enhance these tools.',
                 note_goal: '<strong>Long-term Goal:</strong> Our long-term goal is to develop a comprehensive, in-house ERP system that digitizes and streamlines all of QGO Cargo\'s operational needs, significantly boosting efficiency and reducing manual workload.',
                 footer_thanks1: '<i data-lucide="heart" class="w-5 h-5 text-red-500 mx-2 fill-current"></i> This project is a collaborative effort, made possible by the invaluable support from the QGO Cargo team.',
-                footer_thanks2: 'Special thanks to our Manager, Mr. Yehia, and the dedicated testing team: Mr. Ajmal, Abdul Hadi, and Anand.',
+                footer_thanks2: 'Special thanks to our Manager, Mr. Yehia, and the dedicated testing team: Mr. Ajmal, Abdul Hadi, Anand, and Shakir.',
                 install_prompt: 'Install QGO Tools App',
                 install_desc: 'For a seamless, fast experience.',
                 install_btn: 'Install',
@@ -727,7 +727,7 @@
                 note_feedback: '<strong>نرحب بالملاحظات:</strong> الملاحظات المستمرة ضرورية لعملية التطوير لدينا. نشجع جميع المستخدمين على الإبلاغ عن أي أخطاء أو اقتراح تحسينات لمساعدتنا في تحسين هذه الأدوات.',
                 note_goal: '<strong>الهدف طويل الأجل:</strong> هدفنا طويل الأجل هو تطوير نظام تخطيط موارد مؤسسات (ERP) داخلي شامل يقوم برقمنة وتبسيط جميع الاحتياجات التشغيلية لشركة QGO Cargo، مما يعزز الكفاءة بشكل كبير ويقلل من عبء العمل اليدوي.',
                 footer_thanks1: '<i data-lucide="heart" class="w-5 h-5 text-red-500 mx-2 fill-current"></i> هذا المشروع هو جهد تعاوني، أصبح ممكنًا بفضل الدعم القيم من فريق QGO Cargo.',
-                footer_thanks2: 'شكر خاص لمديرنا السيد يحيى، وفريق الاختبار المتفاني: السيد أجمل، وعبد الهادي، وأناند.',
+                footer_thanks2: 'شكر خاص لمديرنا السيد يحيى، وفريق الاختبار المتفاني: السيد أجمل، وعبد الهادي، وأناند، وشاكر.',
                 install_prompt: 'تثبيت تطبيق أدوات QGO',
                 install_desc: 'لتجربة سلسة وسريعة.',
                 install_btn: 'تثبيت',
