--- a/whm/mobile-scanner.html
+++ b/whm/mobile-scanner.html
@@ -395,9 +395,10 @@
                     <input type="password" id="workerPassword" placeholder="Enter your password" autocomplete="current-password">
                 </div>
                 <button class="btn btn-primary" onclick="workerLogin()">🔐 Login</button>
-                                <button class="debug-btn" onclick="scanner.debugSystem()">🔧 Debug System</button>
-                <button class="debug-btn" onclick="scanner.testSampleQR()">🧪 Test Sample QR</button>
-                <button class="debug-btn" onclick="scanner.showQRFormats()">📋 Show QR Formats</button>
+                                <button class="debug-btn" onclick="debugSystem()">🔧 Debug System</button>
+                <button class="debug-btn" onclick="testSampleQR()">🧪 Test Sample QR</button>
+                <button class="debug-btn" onclick="testBeepSounds()">🔊 Test Beeps</button>
+                <button class="debug-btn" onclick="showQRFormats()">📋 Show QR Formats</button>
                 <p style="margin-top: 1rem; font-size: 0.9rem; color: #6b7280;">
                     Use your warehouse worker credentials to access the scanner
                 </p>
