--- a/whm/index.html
+++ b/whm/index.html
@@ -26,6 +26,7 @@
                 <button onclick="showSection('release')" class="nav-btn">Release</button>
                 <button onclick="showSection('released')" class="nav-btn">Released History</button>
                 <button onclick="showSection('warehouse-map')" class="nav-btn">Warehouse Map</button>
+                <button onclick="openMobileScanner()" class="nav-btn" style="background: #10b981; color: white;">📱 Mobile Scanner</button>
                 <button onclick="showSection('enhanced-rack-management')" class="nav-btn">🏷️ Enhanced Rack System</button>
                 <button onclick="showSection('rack-management')" class="nav-btn">🏷️ Simple Rack QR</button>
                 <button onclick="showSection('pricing')" class="nav-btn">Pricing Settings</button>
